--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -412,6 +412,20 @@ input[type='number'] {
   -moz-appearance:textfield;
 }
 
+textarea {
+  width: 100%;
+  height: 100%;
+  padding: 7.5px 7.5px;
+  font-family: roboto-medium;
+  padding: 5px;
+  border-style: solid;
+  border-radius: 4px;
+  border-width: 1px;
+  background-color: white;
+  border-color: #C4CDD5;
+  font-size: 15px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
