--- a/app/views/my_profile/settings.html.haml
+++ b/app/views/my_profile/settings.html.haml
@@ -26,7 +26,7 @@
 
     %div.admin-content
       = form_for(@my_profile, method: :patch) do |f|
-        - if flash.notice
+        - if flash.notice != "¡Hola <Usuario>! Bienvenido a Abrazos y Café"
           %div.alert-notice
             %ul
               %li #{flash.notice}        
