Ultimos fixes de vista admin

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,3 +87,20 @@
 br {
   padding: 0px;
 }
+
+.alert-admin {
+  position: absolute;
+  font-family: roboto;
+  list-style-type: none;
+  background-color: rgb(230, 230, 230);
+  text-align: center; 
+  margin-left: -30px;
+  padding: 7px;
+  font-size: 18px;
+  width: 80%;
+  ul {
+    li {
+      list-style-type: none;
+    }
+  }
+}
