--- a/app/views/my_profile/settings.html.haml
+++ b/app/views/my_profile/settings.html.haml
@@ -1,7 +1,7 @@
 %div.admin-container
   %div.admin-navbar
     %div.logo
-      = image_tag("logo_temp.svg", alt: "Logo")
+      = link_to image_tag('logo_temp.svg', alt: 'Logo'), root_path
     %div.bar
       %input.disabled
       %p #{@user_email}
@@ -26,8 +26,8 @@
 
     %div.admin-content
       = form_for(@my_profile, method: :patch) do |f|
-        - if flash.notice != "¡Hola <Usuario>! Bienvenido a Abrazos y Café"
-          %div.alert-notice
+        - if flash.notice && flash.notice != "¡Hola <Usuario>! Bienvenido a Abrazos y Café"
+          %div.alert-admin
             %ul
               %li #{flash.notice}        
     
