--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -20,6 +20,7 @@ html {
   .logo {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 29%;
     // margin-left: -30px;
     background-color: #EE4380;
