--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -14,35 +14,37 @@
     %div.profile-description
       -# %div.go-back
       -#   %a(href=my_profile_images_path) < Atrás
-      %p Comunicarme mediante la música es la única forma de expresarme que conozco.
-      %br/
-      %p Vivir tocando es mi proposito, si te gusta lo que escuchas, tu aprecio es lo que me alimenta.
+      %p#bio
+        %script document.getElementById("bio").innerHTML = "<strong>Hello</strong>";
 
-    %div.bootstrap
-      %div#carouselExampleIndicators.carousel.slide{"data-ride" => "carousel"}
-        -# %ol.carousel-indicators
-        -#   %li.active{"data-slide-to" => "0", "data-target" => "#carouselExampleIndicators"}
-        -#   %li{"data-slide-to" => "1", "data-target" => "#carouselExampleIndicators"}
-        -#   %li{"data-slide-to" => "2", "data-target" => "#carouselExampleIndicators"}
-        %div.carousel-inner
-          %div.carousel-item.active
-            %img.d-block.w-100.carousel-img.img{alt: "First slide", src: "https://www.dike.lib.ia.us/images/sample-1.jpg/image"}/
-            %div.carousel-caption
-              %p Sample text
-          %div.carousel-item
-            %img.d-block.w-100.carousel-img.img{alt: "Second slide", src: "https://image.ibb.co/i3o45f/pic.png"}/
-            %div.carousel-caption
-              %p No hay lugar como el ahora
-          %div.carousel-item
-            %img.d-block.w-100.carousel-img.img{alt: "Third slide", src: "https://www.dike.lib.ia.us/images/sample-2.jpg/image"}
-            %div.carousel-caption
-              %p Sample text
-        -# %a.carousel-control-prev{"data-slide" => "prev", href: "#carouselExampleIndicators", role: "button"}
-        -#   %span.carousel-control-prev-icon{"aria-hidden" => "true"}
-        -#   %span.sr-only Previous
-        -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
-        -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
-        -#   %span.sr-only Next
+    -if @profile.images.last != nil
+      %div.bootstrap
+        %div#carouselExampleIndicators.carousel.slide{"data-ride" => "carousel"}
+          -# %ol.carousel-indicators
+          -#   %li.active{"data-slide-to" => "0", "data-target" => "#carouselExampleIndicators"}
+          -#   %li{"data-slide-to" => "1", "data-target" => "#carouselExampleIndicators"}
+          -#   %li{"data-slide-to" => "2", "data-target" => "#carouselExampleIndicators"}
+          %div.carousel-inner
+            - index = 0
+            - @profile.images.each do |image|
+              - puts index
+              - if index == 0
+                %div.carousel-item.active
+                  %img.d-block.w-100.carousel-img.img{alt: "", src: "#{url_for(image.url)}"}/
+                  %div.carousel-caption
+                    %p #{image.description}
+              - else
+                %div.carousel-item
+                  %img.d-block.w-100.carousel-img.img{alt: "", src: "#{url_for(image.url)}"}/
+                  %div.carousel-caption
+                    %p #{image.description}
+              - index += 1
+          -# %a.carousel-control-prev{"data-slide" => "prev", href: "#carouselExampleIndicators", role: "button"}
+          -#   %span.carousel-control-prev-icon{"aria-hidden" => "true"}
+          -#   %span.sr-only Previous
+          -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
+          -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
+          -#   %span.sr-only Next
 
     %div.bootstrap
       %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
