--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -91,7 +91,7 @@
       }
     }
   }
-  .profile-footer {
+  a.profile-footer {
     padding-bottom: 12.5px;
     padding-top: 12.5px;
     width: 100%;
@@ -100,13 +100,12 @@
     flex-direction: column;
     align-items: center;
     background-color:  #EE4380;
+    color: white;
+    font-size: 18px;
+    text-decoration: none;
+    z-index: 1;
     &:hover {
       cursor: pointer;
-    }
-    a {
-      color: white;
-      font-size: 18px;
-      text-decoration: none;
     }
   }
 }
@@ -169,6 +168,9 @@
   filter: drop-shadow(0px 0px 1px rgba(61, 61, 61, 0.2))
   drop-shadow(0px 0px 2px rgba(109, 109, 109, 0.2));
   font-family: roboto;
+  &.minheight {
+    min-height: 155px;
+  }
   .pcard-header {
     display: flex;
     .pcard-title {
@@ -189,7 +191,7 @@
       img {
         position: absolute;
         max-height: 40px;
-        margin-left: 49%;
+        margin-left: 77.5%;
       }
     }
   }
@@ -200,6 +202,20 @@
 
 #myCarousel.carousel {
   margin-bottom: -30px;
+}
+
+div.centered {
+  display: flex;
+  flex-direction: row;
+  text-justify: center;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  p.pcard-text {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
 }
 
 // margin 42
