--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -26,13 +26,12 @@
           %div.carousel-inner
             - index = 0
             - @profile.images.each do |image|
-              - puts index
               - if index == 0
                 %div.carousel-item.active
                   %img.d-block.w-100.carousel-img.img{alt: "", src: "#{url_for(image.url)}"}/
                   %div.carousel-caption
                     %p #{image.description}
-              - else
+              - elsif image.show
                 %div.carousel-item
                   %img.d-block.w-100.carousel-img.img{alt: "", src: "#{url_for(image.url)}"}/
                   %div.carousel-caption
@@ -44,43 +43,69 @@
           -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
           -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
           -#   %span.sr-only Next
+    -if @profile.testimonials.last != nil
+      %div.bootstrap
+        %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
+          -# %ol.carousel-indicators
+          -#   %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
+          -#   %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
+          -#   %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
+          %div.carousel-inner.row.w-100.mx-auto
+            - index = 0
+            - @profile.testimonials.each do |t|
+              -puts "index = " + index.to_s
+              -if index == 0
+                %div.carousel-item.active
+                  %div.pcard.minheight
+                    %div.pcard-body
+                      %div.pcard-header
+                        %div.pcard-title
+                          - if t.appreciation == true
+                            = image_tag 'coffee.svg', alt: 'coffee'
+                          - else
+                            = image_tag 'hug.svg', alt: 'hug'
+                        %div.pcard-title
+                          - if t.fullname != nil
+                            %p #{t.fullname}
+                          - else
+                            %p Anónimo
+                          - if t.role != nil
+                            %p.subtitle #{t.role}
+                          - else
+                            %p.subtitle Sin rol
+                      - if t.message != nil
+                        %p.pcard-text #{t.message}
+                      - else
+                        %div.centered
+                          %p.pcard-text ¡Sigue adelante!
+                        %div.centered
+                          = image_tag 'ico-heart.svg', alt: 'icoheart', height: '52px'
+              -else
+                %div.carousel-item
+                  %div.pcard.minheight
+                    %div.pcard-body
+                      %div.pcard-header
+                        %div.pcard-title
+                          - if t.appreciation == true
+                            = image_tag 'coffee.svg', alt: 'coffee'
+                          - else
+                            = image_tag 'hug.svg', alt: 'hug'
+                        %div.pcard-title
+                          - if t.fullname != nil
+                            %p #{t.fullname}
+                          - else
+                            %p Anónimo
+                          - if t.role != nil
+                            %p.subtitle #{t.role}
+                          - else
+                            %p.subtitle Sin rol
+                      - if t.message != nil
+                        %p.pcard-text #{t.message}
+                      - else
+                        %div.centered
+                          %p.pcard-text ¡Sigue adelante!
+                        %div.centered
+                          = image_tag 'ico-heart.svg', alt: 'icoheart', height: '52px'
+              - index += 1
 
-    %div.bootstrap
-      %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
-        %ol.carousel-indicators
-          %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
-          %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
-          %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
-        %div.carousel-inner.row.w-100.mx-auto
-          %div.carousel-item.active
-            %div.pcard
-              %div.pcard-body
-                %div.pcard-header
-                  %div.pcard-title
-                    %p Full name
-                    %p.subtitle Role
-                  %div.pcard-title
-                    = image_tag 'coffee.svg', alt: 'coffee'
-                %p.pcard-text This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-          %div.carousel-item
-            %div.pcard
-              %div.pcard-body
-                %div.pcard-header
-                  %div.pcard-title
-                    %p Full name
-                    %p.subtitle Role
-                  %div.pcard-title
-                    = image_tag 'hug.svg', alt: 'hug'
-                %p.pcard-text This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-          %div.carousel-item
-            %div.pcard
-              %div.pcard-body
-                %div.pcard-header
-                  %div.pcard-title
-                    %p Full name
-                    %p.subtitle Role
-                  %div.pcard-title
-                    = image_tag 'coffee.svg', alt: 'coffee'
-                %p.pcard-text This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-  %div.profile-footer
-    %a(href="http://google.com") Dar abrazos o café a #{@name}
+  %a.profile-footer(href=profiles_reward_path) Dar abrazos o café a #{@name}
