--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -21,7 +21,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 29%;
+    width: 24.5%;
     // margin-left: -30px;
     background-color: #EE4380;
     img {
@@ -55,7 +55,7 @@ html {
   .admin-sidebar{
     background-color: #F4F6F8;
     color: #212B35;
-    width: 30%;
+    width: 25%;
     margin-right: 30px;
     border-style: solid;
     border-color: #DFE4E8;
@@ -133,7 +133,7 @@ html {
 }
 
 div.card {
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   margin-right: 32px;
   padding-bottom: 30px;
   padding-right: 30px;
@@ -444,4 +444,12 @@ input::-webkit-inner-spin-button {
   max-width: 525px !important;
   overflow-y: auto;
   font-family: roboto;
+  font-size: 15px;
+}
+
+.preview {
+  margin-top: 10px;
+  border-radius: 50px;
+  object-fit: cover;
+  max-height: 125px;
 }
