--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,10 +2,17 @@
 
   %div.profile-navbar
     %div.pavatar
-      %p Avatar
+      - if @profile.avatar.attached?
+        = image_tag url_for(@profile.avatar), alt: 'avatar', class: 'avatar'
+      - else
+        = image_tag 'https://www.manufacturingusa.com/sites/prod/files/default.png', alt: 'avatar', class: 'avatar'
     %div.puser
       %h4 #{@profile.fullname}
+      - if @profile.fullname == (nil || "")
+        %h4 #{@profile.user.email}
       %p #{@profile.role}
+      - if @profile.role == (nil || "")
+        %p Usuari@
     %div.plogo
       = link_to image_tag( 'logo_temp.svg'), root_path
 
@@ -43,6 +50,10 @@
           -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
           -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
           -#   %span.sr-only Next
+    - else
+      %h2 Sin contenido para mostrar.
+      = image_tag 'ico-brokenheart.svg', alt: 'icoheart', height: '300px', class: "grayfilter"
+
     -if @profile.testimonials.last != nil
       %div.bootstrap
         %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
@@ -107,5 +118,16 @@
                         %div.centered
                           = image_tag 'ico-heart.svg', alt: 'icoheart', height: '52px'
               - index += 1
+    -else
+      %div.pcard.not
+        %div.pcard-body
+          %h4 Este usuario no tiene abrazos ni café.
+          %div.centered
+            = image_tag 'ico-brokenheart.svg', alt: 'icoheart', height: '70px'
+          %div.centered
+            %p ¡Sé la primera persona en apoyarle!
 
-  %a.profile-footer(href=profiles_reward_path) Dar abrazos o café a #{@name}
+  -if @profile.fullname != (nil || "")
+    %a.profile-footer(href=profiles_reward_path) Dar abrazos o café a #{@profile.fullname.split(" ")[0]}
+  -else
+    %a.profile-footer(href=profiles_reward_path) Dar abrazos o café a #{@name}
