--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -91,7 +91,7 @@
       }
     }
   }
-  a.profile-footer {
+  .profile-footer {
     padding-bottom: 12.5px;
     padding-top: 12.5px;
     width: 100%;
@@ -200,6 +200,28 @@
   }
   .pcard-text {
     font-size: 14px;
+    &.count {
+      font-family: roboto;
+      color: #363636;
+      font-size: 12px;
+      padding: 5px;
+      padding-top: 1px;
+      padding-bottom: 1px;
+      position: absolute;
+    }
+    &.coffee {
+      border-color: #EE4380;
+      background-color: white;
+      border-style: solid;
+      border-width: 1px;
+      border-radius: 50%;
+      left: 90%;
+      top: 5px;
+    }
+    &.hug {
+      left: 76%;
+      top: 40px;
+    }
   }
 }
 
@@ -236,6 +258,11 @@ div.centered {
 
   object-fit: cover;
   object-position: center right;
+}
+
+.hug-margin {
+    left: 0px;
+    top: 4px;
 }
 
 // margin 42
