Vista Profile Reward 100% Completa

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,11 @@
 }
 
 @font-face {
+  font-family: roboto-lightItalic;
+  src: url(Roboto-LightItalic.ttf);
+}
+
+@font-face {
   font-family: roboto;
   src: url(Roboto-Light.ttf);
 }
