--- a/app/assets/stylesheets/hugs.scss
+++ b/app/assets/stylesheets/hugs.scss
@@ -1,9 +1,18 @@
 #myProgress {
     width: 100%;
     height: 290px;
-    background-color: #0000;;
+    background-color: #0000;
   }
   
+  #transparent{
+    position: absolute;
+    width: 290px;
+    height: 290px;
+    background-color: #0000;
+    z-index: 999999;
+    border-radius: 100%;
+  }
+
   #contenedor{
     position: absolute;
     display: flex;
