--- a/app/views/profiles/reward.html.haml
+++ b/app/views/profiles/reward.html.haml
@@ -31,7 +31,7 @@
         = image_tag 'coffee.svg'
         %p Café
       %a.option-card.minitopmargin(href=profiles_hug_path)
-        = image_tag 'heart.svg'
+        = image_tag 'heart.png'
         %p Abrazo
 
     %div.empty-state
