--- a/app/assets/stylesheets/rewards.scss
+++ b/app/assets/stylesheets/rewards.scss
@@ -7,8 +7,6 @@
   font-weight: normal;
   text-justify: left;
   font-size: 16px;
-  position: relative;
-  left: -16%;
 }
 
 .options-container {
@@ -30,6 +28,9 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    &.full {
+      width: 100%;
+    }
     p {
       font-family: roboto;
       font-size: 16px;
@@ -83,15 +84,44 @@
   margin-bottom: -127px;
 }
 
-// Font Family: Roboto
-// Font Style: Light Italic
-// Font Size: 14px
-// Line Height: 16px
+.pform {
+  display: flex;
+  flex-direction: column;
+  width: 86%;
+  margin: 12.5px;
+  .minicard {
+    h3 {
+    }
+    padding: 15px;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
+    transition: 0.3s;
+    margin-bottom: 10px;
+  }
+  input {
+    font-family: roboto-medium;
+    padding: 5px;
+    width: 95%;
+    border-style: solid;
+    border-radius: 4px;
+    border-width: 1px;
+    background-color: white;
+    border-color: #C4CDD5;
+  }
+}
 
-// coffees
-// W: 170px
-// H: 205px
+div.miniseparator{
+  margin-right: 32px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 1px;
+  background:#DFE4E8;
+  // border-bottom:1px solid #ececec;
+}
 
-// heart
-// W: 269px
-// H: 230px
+.accountli {
+  padding-top: 2.5px;
+  padding-bottom: 2.5px;
+}
