--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -132,7 +132,7 @@ html {
   }
 }
 
-div.card {
+div.card, a.card {
   margin-bottom: 25px;
   margin-right: 32px;
   padding-bottom: 30px;
@@ -142,6 +142,7 @@ div.card {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
   transition: 0.3s;
   width: 100%;
+  text-decoration: none;
   &.bmargin {
     padding-bottom:10px;
   }
@@ -153,8 +154,13 @@ div.card {
     min-width: 25%;
     max-width: 25%;
   }
-  &:hover {
-    // background-color: rgb(233, 238, 243);
+  &.hover {
+    &:hover {
+      background-color: #EA5F91;
+      div > h5, p, img {
+        filter: brightness(500%)
+      }
+    }
   }
   .nested-section {
     display: flex;
