--- a/app/assets/stylesheets/rewards.scss
+++ b/app/assets/stylesheets/rewards.scss
@@ -87,17 +87,34 @@
 .pform {
   display: flex;
   flex-direction: column;
-  width: 86%;
+  width: 88%;
   margin: 12.5px;
   .minicard {
-    h3 {
-    }
     padding: 15px;
     border-radius: 5px;
     background-color: white;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.1);
     transition: 0.3s;
     margin-bottom: 10px;
+    h3 {
+      font-family: roboto-regular;
+      padding-bottom: 10px;
+      font-weight: 100;
+    }
+    .datatitle {
+      font-family: roboto-medium;
+      font-size: 14px;
+      color: #454F5B;
+    }
+    .data {
+      font-family: roboto;
+      font-size: 14px;
+      color: #454F5B;
+      &.field {
+        padding-top: 5px;
+        padding-bottom: 5px;
+      }
+    }
   }
   input {
     font-family: roboto-medium;
@@ -117,11 +134,75 @@ div.miniseparator{
   margin-bottom: 10px;
   width: 100%;
   height: 1px;
-  background:#DFE4E8;
-  // border-bottom:1px solid #ececec;
+  background:#dfe4e8;
 }
 
 .accountli {
   padding-top: 2.5px;
   padding-bottom: 2.5px;
+}
+
+.coffeemount {
+  font-family: roboto-regular;
+  font-size: 10px;
+  color: #8F8F8F;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.flexc-r {
+  display: flex;
+  flex-direction: row;
+}
+.flexc-c {
+  display: flex;
+  flex-direction: column;
+}
+
+.inline {
+  input[type=radio]{
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    background-color: transparent;
+    border-style: solid;
+    border-color: #EE4380;
+    border-width: 1px;
+    font-size: 16px;
+    padding: 20px;
+    border-radius: 100%;
+    text-align: center;
+    max-width: 35px;
+    &:hover {
+      background-color: rgb(255, 223, 234)
+    }
+    &:checked {
+      background-color: #EE4380;
+    }
+    &:checked + p {
+      color: white;
+    }
+  }
+  p {
+    position: relative;
+    top: 35%;
+    right: 12%;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none;
+  }
+}
+
+.coffeetotal {
+  font-family: roboto-medium;
+  font-size: 12px;
+  text-align: center;
+  color: #363636;
+  margin-top: 10px;
+}
+
+.x {
+  margin: 15px;
 }
