--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -3,9 +3,16 @@
     %div.logo
       = link_to image_tag('logo_temp.svg', alt: 'Logo'), root_path
     %div.bar
-      %input.disabled
-      %p #{@user_email}
-
+      %input.disabled{disabled: true}
+      - if @profile.fullname == (nil || "")
+        %p #{@profile.user.email}
+      - else
+        %p.name #{@profile.fullname}
+      %div.pavatar
+        - if @profile.avatar.attached?
+          = image_tag url_for(@profile.avatar), alt: 'avatar', class: 'my_profile_avatar'
+        - else
+          = image_tag 'https://www.manufacturingusa.com/sites/prod/files/default.png', alt: 'avatar', class: 'my_profile_avatar'
 
   %div.admin-view
 
@@ -27,8 +34,8 @@
     %div.admin-content
 
       %div.header
-        = link_to image_tag('ico-return.svg', alt: 'Icon'), my_profile_accounts_path
-        %a.returnbtn(href=my_profile_accounts_path) Listado de cuentas
+        = link_to image_tag('ico-return.svg', alt: 'Icon'), my_profile_accounts_path(@id)
+        = link_to "Listado de Cuentas", my_profile_accounts_path(@id), class: "returnbtn"
         %h1 Editar Cuenta
         %div.separator
         = form_for @account do |f| 
