--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -36,7 +36,6 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     align-items: center;
     justify-content: center;
-    // padding-right: 5px;
     input {
       padding-top: 10px;
       padding-bottom: 10px;
@@ -44,7 +43,14 @@ html {
       background-color: #F67DA8;
       border-style: none;
       width: 80%;
-      margin-right: 20px;
+      margin-right: 15px;
+      margin-left: 30px;
+    }
+    p.name {
+      padding-right: 0.5%;
+      padding-left: 0.5%;
+      overflow:hidden;
+      white-space:nowrap;
     }
   }
 }
@@ -284,7 +290,7 @@ div.card, a.card {
       margin-left: 0%;
       &.fixpos {
         position: absolute;
-        margin-left: 65%;
+        margin-left: 71%;
       }
       &:hover {
         cursor: pointer;
@@ -367,7 +373,7 @@ div.card, a.card {
 }
 
 .pinkbtn {
-  margin-top: -60px;
+  margin-top: -52.5px;
   margin-right: 63px;
   padding: 10px;
   padding-left: 30px;
@@ -458,4 +464,13 @@ input::-webkit-inner-spin-button {
   border-radius: 50px;
   object-fit: cover;
   max-height: 125px;
+}
+
+.my_profile_avatar {
+  max-height: 45px;
+  max-width: 45px;
+  text-align: center;
+  border-radius: 50%;
+  margin-left: 15px;
+  margin-right: 10px;
 }
