--- a/app/views/my_profile/accounts.html.haml
+++ b/app/views/my_profile/accounts.html.haml
@@ -3,8 +3,16 @@
     %div.logo
       = link_to image_tag('logo_temp.svg', alt: 'Logo'), root_path
     %div.bar
-      %input.disabled
-      %p #{@user_email}
+      %input.disabled{disabled: true}
+      - if @profile.fullname == (nil || "")
+        %p #{@profile.user.email}
+      - else
+        %p.name #{@profile.fullname}
+      %div.pavatar
+        - if @profile.avatar.attached?
+          = image_tag url_for(@profile.avatar), alt: 'avatar', class: 'my_profile_avatar'
+        - else
+          = image_tag 'https://www.manufacturingusa.com/sites/prod/files/default.png', alt: 'avatar', class: 'my_profile_avatar'
 
 
   %div.admin-view
@@ -45,7 +53,38 @@
                 %li.lpadding.nothingfound No tienes ninguna cuenta bancaria vinculada a tu perfil. ¡Agrega una!
             - @my_profile.accounts.each do |account|
               %ul
-                %li.lpadding= "Entidad: " + account.entity.to_s + ", e-mail: " + account.email.to_s + ", Numero de cuenta: " + account.account_number.to_s + ", CI_RIF: " + account.rif_ci.to_s + ", Tipo de cuenta:" + account.account_type.to_s
+                %li.lpadding 
+                  -if account.entity != (nil || "")
+                    %span
+                      %b
+                        Entidad:
+                    %span= account.entity
+                    %br/
+                  -if account.email != (nil || "")
+                    %span
+                      %b
+                        Email:
+                    %span= account.email
+                    %br/
+                  -if account.account_number != nil
+                    %span
+                      %b
+                        Nro de Cuenta:
+                    %span= account.account_number
+                    %br/
+                  -if account.rif_ci != (nil || "")
+                    %span
+                      %b
+                        RIF o Cédula:
+                    %span= account.rif_ci
+                    %br/
+                  -if account.account_type != (nil || "")
+                    %span
+                      %b
+                        Tipo de Cuenta:
+                    %span= account.account_type
+                    %br/
+
                 %div.options
                   = image_tag 'ico-options.svg', alt: 'options', class: ''
                   %div.options-content
